--- a/Vienna/SharedSupport/Plugins/ShareWithBuffer.viennaplugin/en.lproj/InfoPlist.strings
+++ b/Vienna/SharedSupport/Plugins/ShareWithBuffer.viennaplugin/en.lproj/InfoPlist.strings
@@ -8,4 +8,4 @@
 "Tooltip" = "Add the current article to Buffer";
 
 /* The URL that will be opened when the plug-in is invoked. You can change the domain or parts of the URL query to use a version of the website that matches the language. The tokens "$ArticleLink$" and "$ArticleTitle$" must be kept and must not be translated. */
-"URL" = "http://bufferapp.com/add?url=$ArticleLink$&text=$ArticleTitle$&source=vienna";
+"URL" = "https://publish.buffer.com/compose?url=$ArticleLink$&text=$ArticleTitle$&source=vienna";
