--- a/Vienna/SharedSupport/Plugins/BloggerFeedSource.viennaplugin/en.lproj/InfoPlist.strings
+++ b/Vienna/SharedSupport/Plugins/BloggerFeedSource.viennaplugin/en.lproj/InfoPlist.strings
@@ -5,7 +5,7 @@
 "LinkName" = "Enter Blogspot user name";
 
 /* The feed or web-page URL that will be used to add or discover a feed. You can change the domain or parts of the URL query to use a version of the website that matches the language. */
-"LinkTemplate" = "http://%@.blogspot.com/atom.xml";
+"LinkTemplate" = "https://%@.blogspot.com/atom.xml";
 
 /* The home page of the feed source. */
-"SiteHomePage" = "http://www.blogspot.com";
+"SiteHomePage" = "https://www.blogspot.com";
