--- a/Vienna/SharedSupport/Plugins/BazQuxSyncServer.viennaplugin/sv.lproj/InfoPlist.strings
+++ b/Vienna/SharedSupport/Plugins/BazQuxSyncServer.viennaplugin/sv.lproj/InfoPlist.strings
@@ -2,4 +2,4 @@
 "FriendlyName" = "BazQux";
 
 /* An instruction for the user. This will be shown above the text fields. */
-"Hint" = "Entrez les informations de la section « Mobile login » des réglages de BazQux";
+"Hint" = "Ange informationen du angav i BazQux inställningar för \"Mobil inloggning\"";
