--- a/Vienna/SharedSupport/Plugins/FeedHQSyncServer.viennaplugin/sv.lproj/InfoPlist.strings
+++ b/Vienna/SharedSupport/Plugins/FeedHQSyncServer.viennaplugin/sv.lproj/InfoPlist.strings
@@ -2,4 +2,4 @@
 "FriendlyName" = "FeedHQ";
 
 /* An instruction for the user. This will be shown above the text fields. */
-"Hint" = "Entrez le nom utilisateur (ou l'adresse mail) et le mot de passe associé à votre compte FeedHQ";
+"Hint" = "Ange användarnamn (eller e-postadress) och lösenord som är kopplat till ditt FeedHQ-konto";
