--- a/Vienna/SharedSupport/Plugins/InoReaderSyncServer.viennaplugin/sv.lproj/InfoPlist.strings
+++ b/Vienna/SharedSupport/Plugins/InoReaderSyncServer.viennaplugin/sv.lproj/InfoPlist.strings
@@ -2,4 +2,4 @@
 "FriendlyName" = "InoReader";
 
 /* An instruction for the user. This will be shown above the text fields. */
-"Hint" = "Entrez le nom d'utilisateur et le mot de passe de votre compte InoReader";
+"Hint" = "Ange användarnamn och lösenord som är kopplat till ditt InoReader-konto";
