--- a/Vienna/SharedSupport/Plugins/BloggerFeedSource.viennaplugin/sv.lproj/InfoPlist.strings
+++ b/Vienna/SharedSupport/Plugins/BloggerFeedSource.viennaplugin/sv.lproj/InfoPlist.strings
@@ -1,2 +1,5 @@
+/* The name of feed source. */
+"FriendlyName" = "Blogspot";
+
 /* An instruction for the user. This will be shown above a text field. */
 "LinkName" = "Ange Blogspot användarnamn";
