--- a/Vienna/SharedSupport/Plugins/LogdownFeedSource.viennaplugin/sv.lproj/InfoPlist.strings
+++ b/Vienna/SharedSupport/Plugins/LogdownFeedSource.viennaplugin/sv.lproj/InfoPlist.strings
@@ -1,5 +1,5 @@
 /* The name of feed source. */
-"FriendlyName" = "LiveJournal";
+"FriendlyName" = "Logdown";
 
 /* An instruction for the user. This will be shown above a text field. */
-"LinkName" = "Entrer le nom d'utilisateur LiveJournal";
+"LinkName" = "Ange Logdown användarnamn";
