--- a/Vienna/SharedSupport/Plugins/ShareWithX.viennaplugin/en.lproj/InfoPlist.strings
+++ b/Vienna/SharedSupport/Plugins/ShareWithX.viennaplugin/en.lproj/InfoPlist.strings
@@ -1,8 +1,8 @@
 /* The name of the plug-in, such as the name of the website or app. */
-"FriendlyName" = "Twitter";
+"FriendlyName" = "X";
 
 /* The label for the plug-in in toolbar items and menu items. */
-"MenuPath" = "Dela med Twitter";
+"MenuPath" = "Share With X";
 
 /* The tool tip for the plug-in in toolbar items. */
-"Tooltip" = "Dela nuvarande artikel på twitter";
+"Tooltip" = "Share the current article on X";
