Import translations from Crowdin

--- a/Vienna/Interfaces/mul.lproj/Preferences.xcstrings
+++ b/Vienna/Interfaces/mul.lproj/Preferences.xcstrings
@@ -6097,7 +6097,7 @@
         "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "檢查最新的 Bete 版本"
+            "value" : "檢查最新的 Beta 版本"
           }
         }
       }
