Import translations from Crowdin

--- a/Vienna/Interfaces/mul.lproj/Application.xcstrings
+++ b/Vienna/Interfaces/mul.lproj/Application.xcstrings
@@ -15016,7 +15016,7 @@
         "nl" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Forceer bijwerken abonnementen van Open Reader"
+            "value" : "Werk abonnementen van Open Reader geforceerd bij"
           }
         },
         "pt-BR" : {
