Add cmd+shift+t "Reopen Closed Tab" functionality

--- a/Vienna/Interfaces/mul.lproj/Application.xcstrings
+++ b/Vienna/Interfaces/mul.lproj/Application.xcstrings
@@ -15255,6 +15255,18 @@
         }
       }
     },
+    "Qlz-BL-rsc.title" : {
+      "comment" : "Class = \"NSMenuItem\"; title = \"Reopen Last Closed Tab\"; ObjectID = \"Qlz-BL-rsc\";",
+      "extractionState" : "extracted_with_value",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "Reopen Last Closed Tab"
+          }
+        }
+      }
+    },
     "bd7-qY-ofB.title" : {
       "comment" : "Class = \"NSMenuItem\"; title = \"Text Replacement\"; ObjectID = \"bd7-qY-ofB\";",
       "extractionState" : "extracted_with_value",
