add subscription menu item to menubar icon
Adds "Add Subscription…" menu item to the menubar icon, positioned after
"Show Main Window" and before the refresh/mark read actions.

--- a/Vienna/Resources/Localizable.xcstrings
+++ b/Vienna/Resources/Localizable.xcstrings
@@ -3700,6 +3700,9 @@
         }
       }
     },
+    "Add Subscription…" : {
+      "comment" : "Title of a menu item"
+    },
     "Add to Safari Reading List" : {
       "comment" : "Toolbar item palette label",
       "localizations" : {
