Import translations from Crowdin

--- a/Vienna/Interfaces/mul.lproj/Application.xcstrings
+++ b/Vienna/Interfaces/mul.lproj/Application.xcstrings
@@ -15112,7 +15112,7 @@
         "nl" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Bijwerken abonnementen van Open Reader"
+            "value" : "Werk abonnementen van Open Reader bij"
           }
         },
         "pt-BR" : {
