--- a/Vienna/SharedSupport/Plugins/TheOldReaderSyncServer.viennaplugin/fr.lproj/InfoPlist.strings
+++ b/Vienna/SharedSupport/Plugins/TheOldReaderSyncServer.viennaplugin/fr.lproj/InfoPlist.strings
@@ -1,2 +1,5 @@
+/* The name of sync server. */
+"FriendlyName" = "The Old Reader";
+
 /* An instruction for the user. This will be shown above the text fields. */
 "Hint" = "Entrez le nom d'utilisateur et le mot de passe définis dans la section Réglage/Général du site theoldreader.com";
